Fix layout so that save button no longer covers up error text

--- a/src/styles/customizer/CustomProductAdminEditor.module.css
+++ b/src/styles/customizer/CustomProductAdminEditor.module.css
@@ -67,9 +67,6 @@
 }
 
 .error {
-  position: absolute;
-  right: 0;
-  bottom: 0;
   background-color: var(--color-danger);
   color: white;
   padding: 5px;
@@ -150,9 +147,16 @@
   opacity: 1;
 }
 
-.save {
+.save-container {
   position: absolute;
   right: 10px;
   bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.save {
+  display: block;
   font-size: 1.5rem;
 }
